fix: long gap in blocks chooser  - refs #296754

--- a/src/components/manage/Blocks/CountryMapProfile/styles.less
+++ b/src/components/manage/Blocks/CountryMapProfile/styles.less
@@ -1,7 +1,7 @@
 @height: 600px;
 @fpHeight: 450px;
 
-.countryMapProfile {
+.countryMapProfileBlock {
   height: @height;
   min-height: @height;
 
@@ -299,7 +299,7 @@
 }
 
 .cca-main-homepage .tabs-block {
-  .countryMapProfile {
+  .countryMapProfileBlock {
     min-height: @fpHeight;
 
     .ol-map-wrapper,
